deployments/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monitor-api
  name: monitor-api
  namespace: pulse-check
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor-api
  template:
    metadata:
      labels:
        app: monitor-api
    spec:
      containers:
        - image: monitor-api:dev
          imagePullPolicy: Never
          name: monitor-api
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: monitor-data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: monitor-data
          hostPath:
            path: /tmp/monitor-api-data
            type: DirectoryOrCreate
