deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monitor-api
  name: monitor-api
  namespace: pulse-check
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: monitor-api
  type: ClusterIP
